# react-native-fast-tflite

./: .eslintrc.js  MIGRATION_V2_TO_V3.md  README.md  nitro.json  package.json  react-native-fast-tflite.podspec
.github/workflows/: build-android.yml  build-ios.yml  harness-android.yml  harness-ios.yml  validate-js.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/tflite/: HybridAssetLoader.kt  NitroTflitePackage.kt
cpp/: HybridTfliteModel.cpp  HybridTfliteModel.hpp  HybridTfliteModule.cpp  HybridTfliteModule.hpp  TfliteHelpers.cpp  TfliteHelpers.hpp
example/: app.json  jest.harness.config.mjs  metro.config.js  package.json  rn-harness.config.mjs  tsconfig.json
example/__tests__/: tflite.harness.ts
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/margelo/nitro/tflite/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/java/com/tfliteexamplenew/: MainActivity.kt  MainApplication.kt
example/ios/: Podfile
example/ios/TfliteExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/TfliteExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: Bridge.h  HybridAssetLoader.swift  Tflite.mm
src/: index.ts  loadTensorflowModel.ts  useTensorflowModel.ts
src/specs/: Tflite.nitro.ts
